--- a/signup/templates/register.html
+++ b/signup/templates/register.html
@@ -1,10 +1,11 @@
 {% extends "index.html" %}
 {% block content %}
-<h1> Register </h1>
-<form action="/accounts/reg_success/" method="POST">{% csrf_token %}
+<h1 align="center"> Register </h1><br><br>
+<form action="/accounts/register/" method="post">{% csrf_token %}
 
-    {{ form.as_ul }}<br><br>
-    <input type="submit" value="Sign Up">
-
+    <div  style="margin-left:200px">
+        {{ form.as_p }}<br><br>
+        <input type="submit" value="Sign Up">
+    </div>
 </form>
 {% endblock %}
