--- a/signup/templates/registration/password_reset_form.html
+++ b/signup/templates/registration/password_reset_form.html
@@ -1,13 +1,12 @@
 {% extends "index.html" %}
-
+{% load i18n %}
 {% block content %}
-<p>Please specify your email address to receive instructions for resetting it.</p>
 
-<form action="/user/password/reset/" method="post">{% csrf_token %}
-    <!--<div style="display:none">
-        <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
-    </div>-->
-     {{ form.email.errors }}
-    <p><label for="id_email">E-mail address:</label> <input type="text" name="email"> <input type="submit" value="Reset password" /></p>
+<p>{% trans "Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one." %}</p>
+
+<form action="" method="post">{% csrf_token %}
+{{ form.email.errors }}
+<p><label for="id_email">{% trans 'Email address:' %}</label> {{ form.email }} <input type="submit" value="{% trans 'Reset my password' %}" /></p>
 </form>
+
 {% endblock %}
