--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="home.css">
-</head>
-<body>
+{% extends 'index.html' %}
+        {% block content %}
+
 <div>
     <div id="leftpane">
 
@@ -14,13 +9,11 @@
         <h1>Center pane</h1>
         <a href="/view/group">View your Groups</a><br>
         <a href="/view/yourpost">Your Posts</a><br>
+        <a href="/logout">Log Out</a>
     </div>
     <div id="rightpane">
 
     </div>
 </div>
 
-
-
-</body>
-</html>
+{% endblock %}
