--- a/signin/templates/login.html
+++ b/signin/templates/login.html
@@ -2,13 +2,11 @@
 {% block content %}
 <center>
     <h1>Login</h1>
-    <form action="/accounts/login_chk/" method="post">{% csrf_token %}
-        <label for="username">Username</label>
-        <input type="text" name="username" placeholder="Username"><br>
-        <label for="password">Password</label>
-        <input type="password" name="password"><br>
+    <form action="" method="post">{% csrf_token %}
+         {{ form.as_p }}
         <input type="submit">
     </form>
+    <p>forgot password? <a href="/password_reset/">click here</a></p>
 </center>
 {% endblock %}
 
