--- a/signup/templates/register.html
+++ b/signup/templates/register.html
@@ -1,14 +1,18 @@
 {% extends "index.html" %}
 {% block content %}
-<h1 align="center"> Register </h1><br><br>
+<h1 align="center"> Register </h1>
+<center>
 <form action="/accounts/register/" method="post">{% csrf_token %}
 {% if form.errors %}<p>form has errors</p>{% endif %}
-    <div  style="margin-left:200px">
-        {{ form.as_p }}<br><br>
-        <input type="submit" value="Sign Up">
-
-
+    <div  style="background-color:white;width:300px;padding:20px;border-radius:20px">
+        <label for ="first_name">First Name:</label><br>{{ form.first_name }}<br><br>
+        <label for ="last_name">Last Name:</label><br>{{ form.last_name }}<br><br>
+        <label for ="username">Username:</label><br>{{ form.username }}<br><br>
+        <label for ="email">Valid Email Id:</label><br>{{ form.email }}<br><br>
+        <label for ="Password1">Password:</label><br>{{ form.password1 }}<br><br>
+        <label for ="Password2">Confirm Password:</label><br>{{ form.password2 }}<br><br>
     </div>
+    <center><input type="submit" value="Sign Up"></center>
 </form>
- <p>forgot password? <a href="/password_reset/">click here</a></p>
+</center>
 {% endblock %}
