--- a/article/templates/view.html
+++ b/article/templates/view.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends "index.html" %}
+{% block content %}
+<h1>{{ article.Title }}</h1>
+<p>{{ article.Body }}<p>
 
-</body>
-</html>
+{% endblock %}
