--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -10,6 +10,7 @@
         <a href="/view/group">View your Groups</a><br>
         <a href="/view/yourpost">Your Posts</a><br>
         <a href="/logout">Log Out</a>
+        <a href="/article/add/">Add Article</a>
     </div>
     <div id="rightpane">
 
