Edit, Delete Article left

--- a/article/templates/MyGroup.html
+++ b/article/templates/MyGroup.html
@@ -1,19 +1,24 @@
 {% extends "index.html" %}
 {% block content %}
+
+
 {% if articles.count > 0 %}
 <h1> Articles </h1>
-        {{ article.group_id }}
-{% if article.group_id = grp %}
-        {% if article.Author_id = parameter %}
+        <a href="add/">Add a New Article</a>
 {% for article in articles %}
+
+         {% if article.Author_id_id = parameter %}
+         {% if article.group_id_id = grp %}
 <div>
+
+    <a href="add/">Add a New Article</a>
     <h2><a href="/articles/get/{{ article.id }}/">{{ article.Title }}</a> </h2>
     <p>{{ article.Body|upper|truncatewords:"10" }}</p><!-- filters -->
     <p>{{ article.Link }}</p>
 </div>
+        {% endif %}
+        {% endif %}
 {% endfor %}
-{% endif %}
-{% endif %}
 
 {% else %}
 None
