--- a/home/templates/group_all.html
+++ b/home/templates/group_all.html
@@ -4,7 +4,7 @@
         {% for i in check %}
 
         <ul>
-        <li><a name="join" href=/view/get/{{ i.id }} >{{ i }}</a></li>
+        <li><a name="join" href=/view/get/{{ i }} >{{ i }}</a></li>
         </ul>
 
         {% endfor %}
