--- a/article/templates/add.html
+++ b/article/templates/add.html
@@ -1,4 +1,4 @@
-{% extends 'index.html' %}
+{% extends 'base.html' %}
 {% block content %}
 <form name="addarticle" action="" method="POST">{% csrf_token %}
     <ul style="list-style:None;">
