--- a/article/templates/articles.html
+++ b/article/templates/articles.html
@@ -1,12 +1,11 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 {% block content %}
 {% if articles.count > 0 %}
 <h1> Articles </h1>
-        {{ article.group_id }}
 {% if article.group_id = grp %}
         {% if article.Author_id = parameter %}
 {% for article in articles %}
-<div>
+<div id="art_cont">
     <h2><a href="/articles/get/{{ article.id }}/">{{ article.Title }}</a> </h2>
     <p>{{ article.Body|upper|truncatewords:"10" }}</p><!-- filters -->
     <p>{{ article.Link }}</p>
