--- a/home/templates/group.html
+++ b/home/templates/group.html
@@ -1,11 +1,19 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 {% block content %}
 
         {% for i in check %}
 
-        <ul>
-        <li><a href= {{ i }}>{{ i }}</a></li>
-        </ul>
+
+        <div id="cont_grp">{{ i }}
+            <a href="{{ i}}/unjoin" class="btn btn-danger btn-xs" style="float:right; margin-right: 2px;">
+                Unjoin
+            </a>
+            <a href="{{ i }}" class="btn btn-primary btn-xs" style="float:right; margin-right:2px;">
+                View
+            </a>
+
+        </div>
+
         {% endfor %}
         <a href="all">View all groups</a>
 
