--- a/home/templates/group_all.html
+++ b/home/templates/group_all.html
@@ -1,11 +1,15 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 {% block content %}
 
         {% for i in check %}
 
-        <ul>
-        <li><a name="join" href=/view/get/{{ i }} >{{ i }}</a></li>
-        </ul>
+
+        <div id="cont_grp">{{ i }}
+            <a name="join" href="/view/get/{{ i }}" class="btn btn-primary btn-xs" style="float:right;" >
+                Join Group
+            </a>
+        </div>
+
 
         {% endfor %}
 
