--- a/static/css/home.css
+++ b/static/css/home.css
@@ -67,3 +67,11 @@ padding: 5px;
 border-radius: 3px;
 margin: 5px;
 }
+
+#comment_cont{
+background-color: #ccf;
+padding: 5px;
+border-radius: 3px;
+margin: 5px;
+min-height:10px;
+}
