--- a/home/templates/group_all.html
+++ b/home/templates/group_all.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %}
-{% block content %}
+{% extends "group.html" %}
+{% block content-sub %}
 
         {% for i in check %}
 
