--- a/signup/templates/register_success.html
+++ b/signup/templates/register_success.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends "index.html" %}
+{% block content %}
+<center>
+<p style="color:white;margin-top:80px;margin-bottom:80px;"> Successfully Registered<br>
+    Welcome to Django-Content-Management<br>
+    Click <a href="/accounts/login" style="color:#444;">Here</a> to Login
+</p>
+</center>
 
-</body>
-</html>
+{% endblock %}
