--- a/article/templates/edit.html
+++ b/article/templates/edit.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends 'base.html' %}
+        {% block content %}
+        <form action="" method="post">{% csrf_token %}
+            {{ form.Title }}<br>
+            {{ form.Body }}<br>
+            <input type="submit">
+        </form>
 
-</body>
-</html>
+
+        {% endblock %}
