--- a/article/templates/add.html
+++ b/article/templates/add.html
@@ -1,11 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
+        <h2>Add Article</h2>
+        <hr style="margin-top:0px;">
+        <div>
 <form name="addarticle" action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
-    <ul style="list-style:None;">
-        <li>{{ form.Title }}</li>
-        <li>{{ form.Body }}</li>
-        <li>{{ form.File }}</li>
+    <center><ul style="list-style:None;">
+        <li><label for="Title">Title:&nbsp; </label>{{ form.Title }}{{ form.Title.errors }}</li>
+        <li><label for="Body">Body: </label>{{ form.Body }}{{ form.Body.errors }}</li>
+        <li><label for="File">File: </label>{{ form.File }}{{ form.File.errors }}</li>
     </ul>
     <input type="submit">
+    </center>
 </form>
+      </div>
 {% endblock %}
