--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@ Testing Styles
 <link rel="stylesheet" type="text/css" href="{% static "assets/css/mystyle.css" %}">
 
 </head>
-<body>
+<body background="{% static "assets/images/Wall2.gif" %}">
 <div class="nt-body">
 	<div id="logo">
 		<img src="{% static "assets/images/logo.png" %}" height="70" width="90">
