--- a/article/templates/articles.html
+++ b/article/templates/articles.html
@@ -4,11 +4,11 @@
 <h1> Articles </h1>
 {% if article.group_id = grp %}
         {% if article.Author_id = parameter %}
-{% for article in articles %}
+{% for article in articles reverse %}
 <div id="art_cont">
     <h2><a href="/articles/get/{{ article.id }}/">{{ article.Title }}</a> </h2>
-    <p>{{ article.Body|upper|truncatewords:"10" }}</p><!-- filters -->
-    <p>{{ article.Link }}</p>
+    <p>{{ article.Body|upper|truncatewords:"10" }}</p>
+    {{ article.art_date }}<!-- filters -->
 </div>
 {% endfor %}
 {% endif %}
