--- a/article/templates/view.html
+++ b/article/templates/view.html
@@ -1,12 +1,65 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>{{ article.Title }}<a href="edit" class="btn btn-info btn-xs" style="float:right;">Edit</a></h1>
-<p>{{ article.Body }}<p>
-{% if article.File != '' %}
-<img src="{{ article.File.url }}" alt="Cannot display image" height="40%" width="40%">
-    <br><br>Download File:
-    <a href="{{ article.File.url }}" class="btn btn-xs" style="background-color:#009">Save</a>
-    {% endif %}
+<h1 style="color:olive">{{ article.Title }}<a href="edit" class="btn btn-info btn-xs" style="float:right;">Edit</a></h1>
+<hr style="margin-top:0px">
+
+<br>
+ {% if article.File != '' %}
+    <script>
+        $(document).ready(function(){
+
+            $str="{{ article.File.url }}";
+            if ($str.endsWith(".jpg")||$str.endsWith(".png")||$str.endsWith(".gif")||$str.endsWith(".bmp")){
+                var img,a,b,c,d;
+                img = $('<img>');
+                img.attr('src', $str);
+                img.attr('style', 'border:dotted;border-width:thin;padding:20px;');
+                img.appendTo('#imagediv');
+                a = img.height();
+                if (a>300)
+                {
+                    b = a/300;
+                    img.height(a/b);
+                    img.width(a/b);
+                }
+                c = img.width();
+                if (c>600)
+                {
+                    d=c/600;
+                    img.height(a/b);
+                    img.width(c/d);
+                }
+
+            }
+            else{
+                var text=$str.split("/");
+                var TextArea=$('<p> </p>');
+                    TextArea.appendTo('#textdiv');
+                    TextArea.appendTo('#textdiv');
+                    TextArea.text(text[2]);
+            }
+        });
+    </script>
+ {% endif %}
+    <center>
+    <div id="imagediv">
+
+    </div>
+    </center>
+
+        <br>
+<p>{{ article.Body|urlize|linebreaks }}<p>
+    <br>
+        <hr>
+    {% if article.File != '' %}
+
+<div id="textdiv"></div>
+
+    Open/Save File:
+    <a href="{{ article.File.url }}" class="btn btn-xs" style="background-color:#339; color:white">Save</a>
+    <hr>
+{% endif %}
+
 <form action="" method="POST">{% csrf_token %}
 {{ form.Comment }}<br>
     <input type="submit" value="Post" class="btn btn-info btn-xs">
