--- a/static/css/home.css
+++ b/static/css/home.css
@@ -5,18 +5,16 @@ padding: 0px;
 }
 
 body{
-background-color: #aaa;
+background-attachment:fixed;
+background-size:699px 100%;
 }
-
-header{
-min-height: 100px;
-background-color: #bbb;
-}
-
 footer{
 min-height: 100px;
 background-color: #88a;
 margin-top:4px;
+opacity: 0.4;
+margin-bottom:0px;
+color:white;
 }
 
 #main{
@@ -33,15 +31,20 @@ width:150px;
 float: left;
 border-radius:3px;
 padding:5px;
+opacity: 0.9    ;
+position:fixed;
+padding-top: 15px;
 }
 
 #Right-Sidebar{
 min-height: 400px;
 background-color: #fff;
 width:100px;
-float:right;
+margin-left:808px;
 border-radius:3px;
 padding: 5px;
+opacity: 0.9;
+position:fixed;
 }
 
 #content{
@@ -52,6 +55,7 @@ margin-right:104px;
 border-radius:3px;
 padding: 5px;
 width:650px;
+opacity: 0.9;
 }
 
 #cont_grp{
@@ -61,7 +65,8 @@ margin:4px;
 padding:4px;
 border-radius: 3px;
 border:solid;
-border-color:#bbb;
+border-width:thin;
+
 }
 
 #art_cont{
@@ -92,3 +97,28 @@ border-color:#999;
 .home-art a{
 text-decoration:none;
 }
+
+#left-contact{
+color:black;
+width:330px;
+font-size:small;
+margin-top:5px;
+padding:5px;
+float:left;
+}
+#right-contact{
+width:210px;
+color:black;
+font-size:small;
+margin-top:0px;
+padding:5px;
+float:right;
+margin-right:5px;
+opacity:1;
+}
+
+#contactlink{
+color:black;
+text-decoration:none;
+}
+
