--- a/article/templates/MyGroup.html
+++ b/article/templates/MyGroup.html
@@ -5,13 +5,13 @@
 Articles
 <a href="add/" style="float:right;">Add a New Article</a>
 
-    <hr style="margin:5px;">
+    <hr>
 </div>
 {% if articles.count > 0 %}
 {% for article in articles reversed %}
 
          {% if article.group_id_id = grp %}
-<div id="art_cont">
+<div id="art_cont" style="border-color:black; border:solid;border-width:thin;">
     {% if article.Author_id_id = parameter %}
         <a href="/view/group/{{ article.group_id }}/remove_article/{{ article.id }}" class="btn btn-danger btn-xs" style="float:right;">X</a>
     {% endif %}
