--- a/article/templates/add.html
+++ b/article/templates/add.html
@@ -4,13 +4,14 @@
         <hr style="margin-top:0px;">
         <div>
 <form name="addarticle" action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
-    <center><ul style="list-style:None;">
+    <ul style="list-style:None; margin-left:30px;">
         <li><label for="Title">Title:&nbsp; </label>{{ form.Title }}{{ form.Title.errors }}</li>
         <li><label for="Body">Body: </label>{{ form.Body }}{{ form.Body.errors }}</li>
-        <li><label for="File">File: </label>{{ form.File }}{{ form.File.errors }}</li>
+        <br>
+        <li style="margin-left:40px;">{{ form.File }}{{ form.File.errors }}</li>
     </ul>
-    <input type="submit">
-    </center>
+    <input type="submit" style="margin-left:70px;" class="btn btn-success">
+
 </form>
       </div>
 {% endblock %}
