--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
     {% block content %}
+<div>
 <h3 style="margin-top:5px;">Welcome, {{ user.first_name }}</h3>
 <hr>
+</div>
         {% for i in check %}
-            <div class="home-art" style="border-radius:5px;">
+            <div class="home-art" style="border-radius:5px;border-width:thin">
                 <div class="group">
                     <strong><a href="/view/group/{{i}}" style="color:black;">{{ i }}</a></strong>
                     <a href="/view/group/{{ i }}/add/" class="btn btn-primary btn-xs" style="float:right;">Add a New Article</a>
@@ -16,7 +18,6 @@
                             {% for article in articles %}
                                 {% if i = article.group_id %}
                                     {% if user = article.Author_id %}
-
                                         <a href="/view/group/{{ i }}/show/{{ article.id }}/">{{ article.Title }}</a>
                                         <div style="float:right">{{ article.art_date|timesince }} ago</div><br>
                                     {% endif %}
