--- a/static/css/home.css
+++ b/static/css/home.css
@@ -7,40 +7,42 @@ padding: 0px;
 body{
 background-attachment:fixed;
 background-size:699px 100%;
+padding-left:5px;
 }
-footer{
-min-height: 100px;
+
+.contactus{
+height: 100px;
 background-color: #88a;
-margin-top:4px;
 opacity: 0.4;
 margin-bottom:0px;
 color:white;
+width:100%;
 }
 
 #main{
-width:910px;
-margin: 10px auto;
+width:100%;
 margin-top:60px;
 overflow:hidden;
+height:100%
+padding-top:60px;
 }
 
 #Left-Sidebar{
-min-height:400px;
+min-height:100%;
 background-color: #fff;
-width:150px;
+width:15%;
 float: left;
 border-radius:3px;
 padding:5px;
 opacity: 0.9    ;
 position:fixed;
-padding-top: 15px;
 }
 
 #Right-Sidebar{
-min-height: 400px;
+min-height: 100%;
 background-color: #fff;
-width:100px;
-margin-left:808px;
+width:14%;
+margin-left:85.2%;
 border-radius:3px;
 padding: 5px;
 opacity: 0.9;
@@ -48,14 +50,16 @@ position:fixed;
 }
 
 #content{
-min-height:400px;
+height:91%;
 background-color: #fff;
-margin-left:154px;
-margin-right:104px;
+float:left;
+margin-left:15.3%;
 border-radius:3px;
-padding: 5px;
-width:650px;
+padding:5px;
+width:84.3%;
 opacity: 0.9;
+overflow:auto;
+
 }
 
 #cont_grp{
@@ -102,7 +106,7 @@ text-decoration:none;
 color:black;
 width:330px;
 font-size:small;
-margin-top:5px;
+margin-bottom:0px;
 padding:5px;
 float:left;
 }
@@ -110,7 +114,7 @@ float:left;
 width:210px;
 color:black;
 font-size:small;
-margin-top:0px;
+margin-bottom:0px;
 padding:5px;
 float:right;
 margin-right:5px;
