--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -12,10 +12,11 @@ background-attachment:fixed;
 background-color: #56b;
 width: 800px;
 min-height: 500px;
-margin-top:25px;
+border-radius: 5px;
 border:solid;
-border-color:#fff;	 
+border-color:#fff;
 padding: 20px;
+margin-top:25px;
 }
 
 hr{
