--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,4 @@
 {% load staticfiles %}
-<!DOCTYPE html>
 <html>
 <head>
 <Title>
@@ -12,6 +11,7 @@ Welcome
     <script src="{% static "assets/js/bootstrap.min.js" %}"></script>
 </head>
 <body background="{% static "assets/images/Wall2.gif" %}">
+
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	<div class="Container-fluid">
 			<button type="button" class="navbar-toggle" data-toggle= "collapse" data-target=".navHeaderCollapse">
@@ -32,33 +32,35 @@ Welcome
 
 		</div>
 
+        </div>
+	
     </div>
-	
-</div>
-
 <div id="main">
-	
+
 	<div id="Left-Sidebar">
 	    {% block left-content %}
-
+        <div style="margin-top:10px;"><center>
            <b> {{ user.first_name }}&nbsp;{{ user.last_name }} </b>
-
+            </center>
+        </div>
         <hr>
-        {% endblock %}
-    </div>
-	<div id="Right-Sidebar">
-    {% block right-content %}
+        <b>Articles Published</b> = {{ num.count }}<br>
+         <hr>
+        {% block right-content %}
         {% if nongrp.count > 0 %}
             <p style="margin-top:20px;"><b>Join:</b></p>
         <hr style="margin-top:0px;">
         {% for i in nongrp reversed %}
         <div style="margin-top:10px;background-color:#339; color:white; padding-top:5px;padding-bottom:5px; border-radius:3px;">
-            <center><a name="join" href="/view/get/{{ i }}">{{ i }}</a></center>
+            <center><a name="join" href="/view/get/{{ i }}" style="color:white;">{{ i }}</a></center>
         </div>
         {% endfor %}
-    {% endif %}
-    {% endblock %}
+        {% endif %}
+
+        {% endblock %}
+        {% endblock %}
     </div>
+
 
 	<div id="content">
         {% block content %}
@@ -68,32 +70,30 @@ Welcome
 
 
 
-</div>
-
-<footer>
+<!--
 <div class="contactus">
 
         <div id="right-contact">
-		<b>Reach us at:</b>
-		<hr style="border-color:#000;margin:0px;">
-		<a href="mailto:contact@nexthoughts.com" id="contactlink">contact@nexthoughts.com</a><br>
-		<a href="http://www.nexthoughts.com" id="contactlink">http://www.nexthoughts.com</a><br>
+		    <b>Reach us at:</b>
+		    <hr style="border-color:#000;margin:0px;">
+		    <a href="mailto:contact@nexthoughts.com" id="contactlink">contact@nexthoughts.com</a><br>
+		    <a href="http://www.nexthoughts.com" id="contactlink">http://www.nexthoughts.com</a><br>
 		</div>
 
 		<div id="left-contact">
 
-		<b>Contact</b>
-		<hr style="border-color:#000;margin:0px;">
-		<b>Nexthoughts Software Technologies Pvt Ltd</b><br>
-		4, Science & Technology Entrepreneur's Park,<br>
-		C- 20/1, JSSATE, Sector 62, Noida - 201301, U.P.<br>
+		    <b>Contact</b>
+		    <hr style="border-color:#000;margin:0px;">
+		    <b>Nexthoughts Software Technologies Pvt Ltd</b><br>
+		    4, Science & Technology Entrepreneur's Park,<br>
+	    	C- 20/1, JSSATE, Sector 62, Noida - 201301, U.P.<br>
 
 		</div>
 		<center><img src="{% static "assets/images/logo2.png" %}" style="margin-top:20px;"></center>
 
-	</div>
-</footer>
+</div>
+-->
 
-
+</div>
 </body>
 </html>
